More path fixes

--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@ const examples = [
     prompt:"Realistic woman in mid 40s walking through a city street in New York",
     images:[
       {model:"Reference Image",src:"examples/woman_40_walking_nyc/original.jpeg"},
-      {model:"Veo 3",src:"examples/woman_40_walking_nyc/veo3.mp4"},
+      {model:"Veo 3 - v1",src:"examples/woman_40_walking_nyc/veo3_1.mp4"},
+      {model:"Veo 3 - v1",src:"examples/woman_40_walking_nyc/veo3_2.mp4"},
       {model:"Veo 2",src:"examples/woman_40_walking_nyc/veo2.mp4"},
       {model:"HunYuan",src:"examples/woman_40_walking_nyc/hunyuan.mp4"},
       {model:"Wan 2.1",src:"examples/woman_40_walking_nyc/wan21.mp4"},
@@ -259,8 +260,8 @@ const examples = [
     prompt:"A first person view of a home chef chopping onions",
     images:[
       {model:"Reference Image",src:"examples/onions/original.jpeg"},
-      {model:"Veo 3 - v1",src:"examples/onions/veo3_v1.mp4"},
-      {model:"Veo 3 - v2",src:"examples/onions/veo3_v2.mp4"},
+      {model:"Veo 3 - v1",src:"examples/onions/veo3_1.mp4"},
+      {model:"Veo 3 - v2",src:"examples/onions/veo3_2.mp4"},
       {model:"Veo 2",src:"examples/onions/veo2.mp4"},
       {model:"HunYuan",src:"examples/onions/hunyuan.mp4"},
       {model:"Wan 2.1",src:"examples/onions/wan21.mp4"},
