--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>GenAI Media Showdown</title>
+<title>VideoGen Models @ SPC VideoAI</title>
 
 <!-- ----------- STYLES ----------- -->
 <style>
@@ -183,7 +183,7 @@ nav a:focus,figure:focus,#searchInput:focus{
 <body>
 <header>
   <div class="header-content">
-    <h1>GenAI Media Showdown</h1>
+    <h1>VideoGen Models @ SPC VideoAI</h1>
 
     <div class="search-container">
       <div class="search-icon">🔍</div>
