--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@ const examples = [
       {model:"Reference Image",src:"examples/woman_40_walking_nyc/original.jpeg"},
       {model:"Veo 3 – v1",src:"examples/woman_40_walking_nyc/veo3_1.mp4"},
       {model:"Veo 3 – v2",src:"examples/woman_40_walking_nyc/veo3_2.mp4"},
-      {model:"Veo 2",src:"examples/woman_40_walking_nyc/veo2.mp4"},
+      {model:"Veo 2 - v1",src:"examples/woman_40_walking_nyc/veo2_1.mp4"},
+      {model:"Veo 2 - v2",src:"examples/woman_40_walking_nyc/veo2_2.mp4"},
       {model:"HunYuan",src:"examples/woman_40_walking_nyc/hunyuan.mp4"},
       {model:"Wan 2.1",src:"examples/woman_40_walking_nyc/wan21.mp4"},
       {model:"Kling 1.6",src:"examples/woman_40_walking_nyc/kling16.mp4"},
@@ -405,7 +406,8 @@ const examples = [
       {model:"Reference Image",src:"examples/humming_bird_flying/original.jpeg"},
       {model:"Veo 3 – v1",src:"examples/humming_bird_flying/veo3_1.mp4"},
       {model:"Veo 3 – v2",src:"examples/humming_bird_flying/veo3_2.mp4"},
-      {model:"Veo 2",src:"examples/humming_bird_flying/veo2.mp4"},
+      {model:"Veo 2 - v1",src:"examples/humming_bird_flying/veo2_1.mp4"},
+      {model:"Veo 2 - v2",src:"examples/humming_bird_flying/veo2_2.mp4"},
       {model:"HunYuan",src:"examples/humming_bird_flying/hunyuan.mp4"},
       {model:"Wan 2.1",src:"examples/humming_bird_flying/wan21.mp4"},
       {model:"Kling 1.6",src:"examples/humming_bird_flying/kling16.mp4"},
@@ -419,7 +421,8 @@ const examples = [
       {model:"Reference Image",src:"examples/onions/original.jpeg"},
       {model:"Veo 3 – v1",src:"examples/onions/veo3_1.mp4"},
       {model:"Veo 3 – v2",src:"examples/onions/veo3_2.mp4"},
-      {model:"Veo 2",src:"examples/onions/veo2.mp4"},
+      {model:"Veo 2 - v1",src:"examples/onions/veo2_1.mp4"},
+      {model:"Veo 2 - v2",src:"examples/onions/veo2_2.mp4"},
       {model:"HunYuan",src:"examples/onions/hunyuan.mp4"},
       {model:"Wan 2.1",src:"examples/onions/wan21.mp4"},
       {model:"Kling 1.6",src:"examples/onions/kling16.mp4"},
@@ -433,6 +436,10 @@ const examples = [
       {model:"Reference Image",src:"examples/anime/original.jpeg"},
       {model:"Veo 3 – v1",src:"examples/anime/veo3_1.mp4"},
       {model:"Veo 3 – v2",src:"examples/anime/veo3_2.mp4"}
+      {model:"Veo 2 - v1",src:"examples/anime/veo2_1.mp4"},
+      {model:"Veo 2 - v2",src:"examples/anime/veo2_2.mp4"},
+      {model:"Kling 1.6",src:"examples/anime/kling16.mp4"},
+      {model:"Kling 2.0",src:"examples/anime/kling20.mp4"},
     ],
   },
 ];
