--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ const examples = [
     images:[
       {model:"Reference Image",src:"examples/anime/original.jpeg"},
       {model:"Veo 3 – v1",src:"examples/anime/veo3_1.mp4"},
-      {model:"Veo 3 – v2",src:"examples/anime/veo3_2.mp4"}
+      {model:"Veo 3 – v2",src:"examples/anime/veo3_2.mp4"},
       {model:"Veo 2 - v1",src:"examples/anime/veo2_1.mp4"},
       {model:"Veo 2 - v2",src:"examples/anime/veo2_2.mp4"},
       {model:"Kling 1.6",src:"examples/anime/kling16.mp4"},
