Updated UI with new examples

--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@ const examples = [
       {model:"Veo 3 – v2",src:"examples/woman_40_walking_nyc/veo3_2.mp4"},
       {model:"Veo 2 - v1",src:"examples/woman_40_walking_nyc/veo2_1.mp4"},
       {model:"Veo 2 - v2",src:"examples/woman_40_walking_nyc/veo2_2.mp4"},
+      {model:"Sora - v1",src:"examples/woman_40_walking_nyc/sora_1.mp4"},
+      {model:"Sora - v2",src:"examples/woman_40_walking_nyc/sora_2.mp4"},
       {model:"HunYuan",src:"examples/woman_40_walking_nyc/hunyuan.mp4"},
       {model:"Wan 2.1",src:"examples/woman_40_walking_nyc/wan21.mp4"},
       {model:"Kling 1.6",src:"examples/woman_40_walking_nyc/kling16.mp4"},
@@ -408,6 +410,8 @@ const examples = [
       {model:"Veo 3 – v2",src:"examples/humming_bird_flying/veo3_2.mp4"},
       {model:"Veo 2 - v1",src:"examples/humming_bird_flying/veo2_1.mp4"},
       {model:"Veo 2 - v2",src:"examples/humming_bird_flying/veo2_2.mp4"},
+      {model:"Sora - v1",src:"examples/humming_bird_flying/sora_1.mp4"},
+      {model:"Sora - v2",src:"examples/humming_bird_flying/sora_2.mp4"},
       {model:"HunYuan",src:"examples/humming_bird_flying/hunyuan.mp4"},
       {model:"Wan 2.1",src:"examples/humming_bird_flying/wan21.mp4"},
       {model:"Kling 1.6",src:"examples/humming_bird_flying/kling16.mp4"},
@@ -423,6 +427,8 @@ const examples = [
       {model:"Veo 3 – v2",src:"examples/onions/veo3_2.mp4"},
       {model:"Veo 2 - v1",src:"examples/onions/veo2_1.mp4"},
       {model:"Veo 2 - v2",src:"examples/onions/veo2_2.mp4"},
+      {model:"Sora - v1",src:"examples/onions/sora_1.mp4"},
+      {model:"Sora - v2",src:"examples/onions/sora_2.mp4"},
       {model:"HunYuan",src:"examples/onions/hunyuan.mp4"},
       {model:"Wan 2.1",src:"examples/onions/wan21.mp4"},
       {model:"Kling 1.6",src:"examples/onions/kling16.mp4"},
@@ -438,8 +444,11 @@ const examples = [
       {model:"Veo 3 – v2",src:"examples/anime/veo3_2.mp4"},
       {model:"Veo 2 - v1",src:"examples/anime/veo2_1.mp4"},
       {model:"Veo 2 - v2",src:"examples/anime/veo2_2.mp4"},
+      {model:"Sora - v1",src:"examples/anime/sora_1.mp4"},
+      {model:"Sora - v2",src:"examples/anime/sora_2.mp4"},
       {model:"Kling 1.6",src:"examples/anime/kling16.mp4"},
       {model:"Kling 2.0",src:"examples/anime/kling20.mp4"},
+      {model:"Wan 2.1",src:"examples/anime/wan21.mp4"},
       {model:"FramePack + HunYuan",src:"examples/anime/HYFramepack.mp4"}
     ],
   },
