Changed wan21 to webp

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ const examples = [
       {model:"Sora - v1",src:"examples/woman_40_walking_nyc/sora_1.mp4"},
       {model:"Sora - v2",src:"examples/woman_40_walking_nyc/sora_2.mp4"},
       {model:"HunYuan",src:"examples/woman_40_walking_nyc/hunyuan.mp4"},
-      {model:"Wan 2.1",src:"examples/woman_40_walking_nyc/wan21.mp4"},
+      {model:"Wan 2.1",src:"examples/woman_40_walking_nyc/wan21.webp"},
       {model:"Kling 1.6",src:"examples/woman_40_walking_nyc/kling16.mp4"},
       {model:"Kling 2.0",src:"examples/woman_40_walking_nyc/kling20.mp4"},
       {model:"FramePack + HunYuan",src:"examples/woman_40_walking_nyc/HYFramepack.mp4"}
@@ -413,7 +413,7 @@ const examples = [
       {model:"Sora - v1",src:"examples/humming_bird_flying/sora_1.mp4"},
       {model:"Sora - v2",src:"examples/humming_bird_flying/sora_2.mp4"},
       {model:"HunYuan",src:"examples/humming_bird_flying/hunyuan.mp4"},
-      {model:"Wan 2.1",src:"examples/humming_bird_flying/wan21.mp4"},
+      {model:"Wan 2.1",src:"examples/humming_bird_flying/wan21.webp"},
       {model:"Kling 1.6",src:"examples/humming_bird_flying/kling16.mp4"},
       {model:"Kling 2.0",src:"examples/humming_bird_flying/kling20.mp4"},
       {model:"FramePack + HunYuan",src:"examples/humming_bird_flying/HYFramepack.mp4"}
@@ -430,7 +430,7 @@ const examples = [
       {model:"Sora - v1",src:"examples/onions/sora_1.mp4"},
       {model:"Sora - v2",src:"examples/onions/sora_2.mp4"},
       {model:"HunYuan",src:"examples/onions/hunyuan.mp4"},
-      {model:"Wan 2.1",src:"examples/onions/wan21.mp4"},
+      {model:"Wan 2.1",src:"examples/onions/wan21.webp"},
       {model:"Kling 1.6",src:"examples/onions/kling16.mp4"},
       {model:"Kling 2.0",src:"examples/onions/kling20.mp4"},
       {model:"FramePack + HunYuan",src:"examples/onions/HYFramepack.mp4"}
@@ -448,7 +448,7 @@ const examples = [
       {model:"Sora - v2",src:"examples/anime/sora_2.mp4"},
       {model:"Kling 1.6",src:"examples/anime/kling16.mp4"},
       {model:"Kling 2.0",src:"examples/anime/kling20.mp4"},
-      {model:"Wan 2.1",src:"examples/anime/wan21.mp4"},
+      {model:"Wan 2.1",src:"examples/anime/wan21.webp"},
       {model:"FramePack + HunYuan",src:"examples/anime/HYFramepack.mp4"}
     ],
   },
