--- a/index.html
+++ b/index.html
@@ -533,12 +533,6 @@ const examples = [
         comment: "Exceptional cinematic quality with great attention to lighting and atmosphere."
       },
       {
-        model:"HunYuan",
-        src:"examples/woman_40_walking_nyc/hunyuan.mp4",
-        score: "average",
-        comment: "Decent result but lacks the polish of top-tier models. Some artifacting visible."
-      },
-      {
         model:"Wan 2.1",
         src:"examples/woman_40_walking_nyc/wan21.webp",
         score: "poor",
@@ -555,6 +549,12 @@ const examples = [
         src:"examples/woman_40_walking_nyc/kling20.mp4",
         score: "good",
         comment: "Improved over 1.6 with better background detail and smoother motion."
+      },
+      {
+        model:"CogVideoX 1.5",
+        src:"examples/woman_40_walking_nyc/cogvideox15.mp4",
+        score: "good",
+        comment: "Solid performance with good character consistency throughout the sequence."
       },
       {
         model:"FramePack + HunYuan",
@@ -601,12 +601,6 @@ const examples = [
         comment: "Exceptional biological accuracy and fluid motion. Great depth of field effects."
       },
       {
-        model:"HunYuan",
-        src:"examples/humming_bird_flying/hunyuan.mp4",
-        score: "average",
-        comment: "Captures basic concept but wing detail could be better. Motion feels slightly stiff."
-      },
-      {
         model:"Wan 2.1",
         src:"examples/humming_bird_flying/wan21.webp",
         score: "poor",
@@ -623,6 +617,12 @@ const examples = [
         src:"examples/humming_bird_flying/kling20.mp4",
         score: "good",
         comment: "Notable improvement in wing detail and overall scene composition."
+      },
+      {
+        model:"CogVideoX 1.5",
+        src:"examples/humming_bird_flying/cogvideox15.mp4",
+        score: "good",
+        comment: "Solid performance with good character consistency throughout the sequence."
       },
       {
         model:"FramePack + HunYuan",
@@ -669,12 +669,6 @@ const examples = [
         comment: "Excellent detail in food texture and cutting technique. Very convincing POV."
       },
       {
-        model:"HunYuan",
-        src:"examples/onions/hunyuan.mp4",
-        score: "average",
-        comment: "Basic chopping motion captured but lacks fine detail in hand movements."
-      },
-      {
         model:"Wan 2.1",
         src:"examples/onions/wan21.webp",
         score: "poor",
@@ -689,6 +683,12 @@ const examples = [
       {
         model:"Kling 2.0",
         src:"examples/onions/kling20.mp4",
+        score: "good",
+        comment: "Improved hand coordination and more realistic cutting rhythm."
+      },
+      {
+        model:"CogVideoX 1.5",
+        src:"examples/onions/cogvideox15.mp4",
         score: "good",
         comment: "Improved hand coordination and more realistic cutting rhythm."
       },
@@ -753,6 +753,12 @@ const examples = [
         src:"examples/anime/wan21.webp",
         score: "poor",
         comment: "Static output - misses the entire point of the dynamic scene."
+      },
+      {
+        model:"CogVideoX 1.5",
+        src:"examples/anime/cogvideox15.mp4",
+        score: "good",
+        comment: "Improved hand coordination and more realistic cutting rhythm."
       },
       {
         model:"FramePack + HunYuan",
