--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ const modelScores = {
     animation: 8.4,
     creativity: 8.6
   },
-  "HunYuan": {
+  "Luma Ray 2": {
     instructionFollowing: 7.8,
     consistency: 8.2,
     realism: 7.9,
@@ -614,14 +614,14 @@ const modelScores = {
     animation: 8.6,
     creativity: 8.2
   },
-  "FramePack + HunYuan": {
+  "CogVideoX 1.5": {
     instructionFollowing: 8.0,
     consistency: 8.5,
     realism: 8.1,
     animation: 7.9,
     creativity: 8.3
   },
-  "CogVideoX 1.5": {
+  "FramePack + HunYuan": {
     instructionFollowing: 8.0,
     consistency: 8.5,
     realism: 8.1,
@@ -678,6 +678,22 @@ const i2vExamples = [
         variants:[
           {src:"examples/woman_40_walking_nyc/sora_1.mp4", label:"v1"},
           {src:"examples/woman_40_walking_nyc/sora_2.mp4", label:"v2"}
+        ],
+        score: "excellent",
+        comment: "Exceptional cinematic quality with great attention to lighting and atmosphere.",
+        metrics: {
+          instructionFollowing: 8.7,
+          consistency: 8.5,
+          realism: 9.1,
+          animation: 8.6,
+          creativity: 9.2
+        }
+      },
+      {
+        model:"Luma Ray 2",
+        variants:[
+          {src:"examples/woman_40_walking_nyc/lumalabsray2_1080p.mp4", label:"v1"},
+          {src:"examples/woman_40_walking_nyc/lumalabsray2.mp4", label:"v2"}
         ],
         score: "excellent",
         comment: "Exceptional cinematic quality with great attention to lighting and atmosphere.",
@@ -814,6 +830,22 @@ const i2vExamples = [
         }
       },
       {
+        model:"Luma Ray 2",
+        variants:[
+          {src:"examples/humming_bird_flying/lumalabsray2_1080p.mp4", label:"v1"},
+          {src:"examples/humming_bird_flying/lumalabsray2.mp4", label:"v2"}
+        ],
+        score: "excellent",
+        comment: "Exceptional cinematic quality with great attention to lighting and atmosphere.",
+        metrics: {
+          instructionFollowing: 8.7,
+          consistency: 8.5,
+          realism: 9.1,
+          animation: 8.6,
+          creativity: 9.2
+        }
+      },
+      {
         model:"Wan 2.1",
         src:"examples/humming_bird_flying/wan21.webp",
         score: "poor",
@@ -935,6 +967,22 @@ const i2vExamples = [
           realism: 8.9,
           animation: 8.5,
           creativity: 8.4
+        }
+      },
+      {
+        model:"Luma Ray 2",
+        variants:[
+          {src:"examples/onions/lumalabsray2_1080p.mp4", label:"v1"},
+          {src:"examples/onions/lumalabsray2.mp4", label:"v2"}
+        ],
+        score: "excellent",
+        comment: "Exceptional cinematic quality with great attention to lighting and atmosphere.",
+        metrics: {
+          instructionFollowing: 8.7,
+          consistency: 8.5,
+          realism: 9.1,
+          animation: 8.6,
+          creativity: 9.2
         }
       },
       {
@@ -1062,6 +1110,22 @@ const i2vExamples = [
         }
       },
       {
+        model:"Luma Ray 2",
+        variants:[
+          {src:"examples/anime/lumalabsray2_1080p.mp4", label:"v1"},
+          {src:"examples/anime/lumalabsray2.mp4", label:"v2"}
+        ],
+        score: "excellent",
+        comment: "Exceptional cinematic quality with great attention to lighting and atmosphere.",
+        metrics: {
+          instructionFollowing: 8.7,
+          consistency: 8.5,
+          realism: 9.1,
+          animation: 8.6,
+          creativity: 9.2
+        }
+      },
+      {
         model:"Kling 1.6",
         src:"examples/anime/kling16.mp4",
         score: "good",
@@ -1136,6 +1200,35 @@ const t2vExamples = [
     prompt:"Realistic woman in mid 40s walking through a city street in New York",
     images:[
       {
+        model:"Sora",
+        variants:[
+          {src:"examples/woman_40_walking_nyc/sora_1_t2v.mp4", label:"v1"},
+          {src:"examples/woman_40_walking_nyc/sora_2_t2v.mp4", label:"v2"}
+        ],
+        score: "excellent",
+        comment: "Outstanding anime style rendering with fluid character animation.",
+        metrics: {
+          instructionFollowing: 8.4,
+          consistency: 8.2,
+          realism: 8.9,
+          animation: 8.3,
+          creativity: 8.7
+        }
+      },
+      {
+        model:"Wan 2.1",
+        src:"examples/woman_40_walking_nyc/wan21_t2v.webp",
+        score: "good",
+        comment: "",
+        metrics: {
+          instructionFollowing: 8.2,
+          consistency: 8.0,
+          realism: 8.4,
+          animation: 8.1,
+          creativity: 7.9
+        }
+      },
+      {
         model:"Kling 2.0",
         src:"examples/woman_40_walking_nyc/kling20_t2v.mp4",
         score: "good",
@@ -1161,10 +1254,9 @@ const t2vExamples = [
           creativity: 8.7
         }
       },
- 
       {
         model:"CogVideoX 1.5",
-        src:"examples/dragon_castle/cogvideox15.mp4",
+        src:"examples/woman_40_walking_nyc/cogvideox15_t2v.mp4",
         score: "average",
         comment: "",
         metrics: {
@@ -1174,12 +1266,54 @@ const t2vExamples = [
           animation: 7.3,
           creativity: 8.0
         }
+      },
+      {
+        model:"FramePack + HunYuan",
+        src:"examples/woman_40_walking_nyc/HYFramepack_t2v.mp4",
+        score: "average",
+        comment: "",
+        metrics: {
+          instructionFollowing: 7.5,
+          consistency: 7.7,
+          realism: 7.3,
+          animation: 7.4,
+          creativity: 7.8
+        }
       }
     ],
   },
   {
     prompt:"A nature scene with a blue hummingbird moving towards a flower then flying away",
     images:[
+      {
+        model:"Sora",
+        variants:[
+          {src:"examples/humming_bird_flying/sora_1_t2v.mp4", label:"v1"},
+          {src:"examples/humming_bird_flying/sora_2_t2v.mp4", label:"v2"}
+        ],
+        score: "excellent",
+        comment: "Outstanding anime style rendering with fluid character animation.",
+        metrics: {
+          instructionFollowing: 8.4,
+          consistency: 8.2,
+          realism: 8.9,
+          animation: 8.3,
+          creativity: 8.7
+        }
+      },
+      {
+        model:"Wan 2.1",
+        src:"examples/humming_bird_flying/wan21_t2v.webp",
+        score: "good",
+        comment: "",
+        metrics: {
+          instructionFollowing: 8.2,
+          consistency: 8.0,
+          realism: 8.4,
+          animation: 8.1,
+          creativity: 7.9
+        }
+      },
       {
         model:"Kling 2.0",
         src:"examples/humming_bird_flying/kling20_t2v.mp4",
@@ -1205,12 +1339,67 @@ const t2vExamples = [
           animation: 7.8,
           creativity: 7.7
         }
+      },
+      {
+        model:"CogVideoX 1.5",
+        src:"examples/humming_bird_flying/cogvideox15_t2v.mp4",
+        score: "average",
+        comment: "",
+        metrics: {
+          instructionFollowing: 7.5,
+          consistency: 7.7,
+          realism: 7.3,
+          animation: 7.4,
+          creativity: 7.8
+        }
+      },
+      {
+        model:"FramePack + HunYuan",
+        src:"examples/humming_bird_flying/HYFramepack_t2v.mp4",
+        score: "average",
+        comment: "",
+        metrics: {
+          instructionFollowing: 7.5,
+          consistency: 7.7,
+          realism: 7.3,
+          animation: 7.4,
+          creativity: 7.8
+        }
       }
     ],
   },
   {
     prompt:"A first person view of a home chef chopping onions",
     images:[
+      {
+        model:"Sora",
+        variants:[
+          {src:"examples/onions/sora_1_t2v.mp4", label:"v1"},
+          {src:"examples/onions/sora_2_t2v.mp4", label:"v2"}
+        ],
+        score: "excellent",
+        comment: "Outstanding anime style rendering with fluid character animation.",
+        metrics: {
+          instructionFollowing: 8.4,
+          consistency: 8.2,
+          realism: 8.9,
+          animation: 8.3,
+          creativity: 8.7
+        }
+      },
+      {
+        model:"Wan 2.1",
+        src:"examples/onions/wan21_t2v.webp",
+        score: "good",
+        comment: "",
+        metrics: {
+          instructionFollowing: 8.2,
+          consistency: 8.0,
+          realism: 8.4,
+          animation: 8.1,
+          creativity: 7.9
+        }
+      },
       {
         model:"Kling 2.0",
         src:"examples/onions/kling20_t2v.mp4",
@@ -1236,12 +1425,67 @@ const t2vExamples = [
           animation: 7.4,
           creativity: 7.8
         }
+      },
+      {
+        model:"CogVideoX 1.5",
+        src:"examples/onions/cogvideox15_t2v.mp4",
+        score: "average",
+        comment: "",
+        metrics: {
+          instructionFollowing: 7.5,
+          consistency: 7.7,
+          realism: 7.3,
+          animation: 7.4,
+          creativity: 7.8
+        }
+      },
+      {
+        model:"FramePack + HunYuan",
+        src:"examples/onions/HYFramepack_t2v.mp4",
+        score: "average",
+        comment: "",
+        metrics: {
+          instructionFollowing: 7.5,
+          consistency: 7.7,
+          realism: 7.3,
+          animation: 7.4,
+          creativity: 7.8
+        }
       }
     ],
   },
   {
     prompt:"Anime red-haired girl dodging an arrow – the arrow narrowly misses her, flying left→right",
     images:[
+      {
+        model:"Sora",
+        variants:[
+          {src:"examples/anime/sora_1_t2v.mp4", label:"v1"},
+          {src:"examples/anime/sora_2_t2v.mp4", label:"v2"}
+        ],
+        score: "excellent",
+        comment: "Outstanding anime style rendering with fluid character animation.",
+        metrics: {
+          instructionFollowing: 8.4,
+          consistency: 8.2,
+          realism: 8.9,
+          animation: 8.3,
+          creativity: 8.7
+        }
+      },
+      {
+        model:"Wan 2.1",
+        src:"examples/anime/wan21_t2v.webp",
+        score: "good",
+        comment: "",
+        metrics: {
+          instructionFollowing: 8.2,
+          consistency: 8.0,
+          realism: 8.4,
+          animation: 8.1,
+          creativity: 7.9
+        }
+      },
       {
         model:"Kling 2.0",
         src:"examples/anime/kling20_t2v.mp4",
@@ -1258,6 +1502,32 @@ const t2vExamples = [
       {
         model:"Kling 1.6",
         src:"examples/anime/kling16_t2v.mp4",
+        score: "average",
+        comment: "",
+        metrics: {
+          instructionFollowing: 7.5,
+          consistency: 7.7,
+          realism: 7.3,
+          animation: 7.4,
+          creativity: 7.8
+        }
+      },
+      {
+        model:"CogVideoX 1.5",
+        src:"examples/anime/cogvideox15_t2v.mp4",
+        score: "average",
+        comment: "",
+        metrics: {
+          instructionFollowing: 7.5,
+          consistency: 7.7,
+          realism: 7.3,
+          animation: 7.4,
+          creativity: 7.8
+        }
+      },
+      {
+        model:"FramePack + HunYuan",
+        src:"examples/anime/HYFramepack_t2v.mp4",
         score: "average",
         comment: "",
         metrics: {
