--- a/index.html
+++ b/index.html
@@ -1898,7 +1898,7 @@ class MediaShowdown{
           comment.textContent = img.comment;
           
           scoring.appendChild(badge);
-          scoring.appendChild(comment);
+          //scoring.appendChild(comment);
 
           // Add metrics section if model has scores
           if (img.metrics) { // Changed from modelScores[img.model] to img.metrics
@@ -2009,7 +2009,7 @@ class MediaShowdown{
         comment.textContent = img.comment;
         
         scoring.appendChild(badge);
-        scoring.appendChild(comment);
+        //scoring.appendChild(comment);
 
         // Add metrics section if model has scores
         if (img.metrics) { // Changed from modelScores[img.model] to img.metrics
